# Sungsu_Lab

./: .gitmodules  README.md  setup_dev_environment.txt  template.c  template.h  vs_shortcut_keys.txt
MotionTimeCalculator/: main.cpp
SungsuWorks2015/: SungsuWorks2015.VC.VC.opendb  SungsuWorks2015.sln
SungsuWorks2015/SungsuWorks2015/: ClassDiagram.cd  ReadMe.txt  SungsuWorks2015.aps  SungsuWorks2015.cpp  SungsuWorks2015.h  SungsuWorks2015.rc  SungsuWorks2015.vcxproj  SungsuWorks2015.vcxproj.filters  SungsuWorks2015Dlg.cpp  SungsuWorks2015Dlg.h  resource.h  stdafx.cpp
SungsuWorks2015/SungsuWorks2015/res/: SungsuWorks2015.rc2
cmakePractice/source/: main.cpp
cmakePractice2/common/: libtest.h
cmakePractice2/lib/: libtest.cpp
cmakePractice2/main/: function.cpp  function.h  main.cpp
daniel/: Makefile
daniel/src/: main.cpp
device_tree_study/: device_tree_201105.txt  dmesg_201105.txt  dtb_spi_off.txt  dtb_spi_on.txt
device_tree_study/driver/: spidev.c
device_tree_study/dts_overlay/: bcm2711-rpi-4-b.dts  bcm2711.dtsi  bcm283x.dtsi  spi0-2cs-overlay.dts
firmware/CanOpenSTM32/include/: CO_driver_target.h
firmware/CanOpenSTM32/source/: CO_driver_stm32f207gz.c  CO_driver_stm32h735g-dk.c  comm_stm32f207zg.c  comm_stm32h735g-dk.c
firmware/CanOpenSTM32/stm32f2xx_can/: .cproject  .project
firmware/CanOpenSTM32/stm32h7xx_fdcan/: .cproject
firmware/Legacy/Atmega16/: XBee FW 설계.mm
firmware/Legacy/Themometer/: Thermometer.aps  Thermometer.c
firmware/STM32Cube_FW_F1_V1.8.3/: ※ note.txt
firmware/STM32F103RB-Nucleo/Template/: build history.txt
firmware/STM32F205ZG/Template/: build history.txt
firmware/STM32F207ZG-Nucleo/MakeTest/: .mxproject  MakeTest.ioc  Makefile
firmware/STM32F207ZG-Nucleo/VSCodeTest/: Makefile  (+3 more)
firmware/STM32G031K8-Nucleo/: .extSettings  .mxproject  CMakeLists.txt  FreeRTOS_Mail.ioc  STM32G031K8Tx_FLASH.ld
firmware/STM32G031K8-Nucleo/cmake/stm32cubemx/: CMakeLists.txt
firmware/STM32L432KC-Nucleo/: .mxproject  CMakeLists.txt  main.ioc
firmware/nucleo_l432kc_rust/: memory.x
firmware/nucleo_l432kc_rust2/: Cargo.toml  README.md
firmware/nucleo_l432kc_rust2/.cargo/: config.toml
firmware/nucleo_l432kc_rust2/src/: cli.rs  lib.rs  main.rs  stepper.rs
mergeTest/: test.txt
practice_C#/MyApp/: MyApp.csproj  Program.cs
practice_C#/MyLibrary/: Class1.cs  Functions.cs  MyLibrary.csproj
practice_C#/PracticeCsharp/: PracticeCsharp.sln
practice_googleTest/: CMakeLists.txt  hello_test.cc  mockMyModule.cpp
practice_googleTest/include/: mockMyModule.hpp  myModule.hpp
practice_googleTest2/app/: app.cpp  main.cpp
practice_googleTest2/unit_test/: CMakeLists.txt  hello_test.cpp
practice_linux/: CMakeLists.txt  build_history.txt
practice_linux/include/: Common.h  DirectoryTest.h  DriverTest.h  FileTest.h  FileTestAdvanced.h  FileTestAdvanced.h.gch  GPIOTest.h  Logger.h  MemoryTest.h  PThreadTest.h  ProcessTest.h  ProcessTest.h.gch  SignalTest.h  TimeTest.h  class.h
practice_linux/src/: DirectoryTest.cpp  DriverTest.cpp  FileTest.cpp  FileTestAdvanced.cpp  GPIOTest.cpp  Logger.cpp  MemoryTest.cpp  PThreadTest.cpp  ProcessTest.cpp  SignalTest.cpp  TimeTest.cpp  class.cpp  main.cpp
practice_linux_driver/: build_history.txt
practice_linux_driver/2nd_edition/: readme.txt
practice_linux_driver/helloworld/: Makefile  helloworld.c
practice_linux_driver/my_adxl345/: Makefile  adxl345_rpi.c  bcm2711-rpi-4-b.dts
practice_linux_driver/my_bcm2835aux/: Makefile  spi-bcm2835aux.c
practice_linux_driver/my_mcp2515/: Makefile  mcp251x.c
practice_linux_driver/my_spidev/: Makefile  modules.order  spidev.c
practice_linux_driver/my_spidev_backup/: spidev.c
practice_linux_driver/my_spisungsu/: Makefile  buildhistory.txt  spisungsu.c
practice_linux_driver/myscull/: .built-in.a.cmd  .myscull.ko.cmd  .myscull.mod.cmd  .myscull.mod.o.cmd  .myscull.o.cmd  Makefile  Makefile_old  build_history.txt  modules.order  myscull.c  myscull.h  myscull.ko  myscull.mod  myscull.mod.c
practice_linux_driver/virtual_device/: Makefile  virtual_device.c
practice_rust/cortex-m/: Cargo.toml
practice_rust/cortex-m4/: Cargo.toml  memory.x
practice_rust/cortex-m4/.cargo/: config
practice_rust/cortex-m4/src/: main.rs
practice_rust/cortex-m7/: Cargo.toml  memory.x
practice_rust/cortex-m7/src/: main.rs
practice_rust/my_first_rust/: Cargo.toml
practice_rust/nucleo_f401re/: Cargo.toml
practice_rust/nucleo_f401re_rust/: Cargo.toml  README.md
practice_rust/nucleo_l432kc_rust/: Cargo.toml  README.md
practice_rust/nucleo_l432kc_rust/.cargo/: config
practice_rust/nucleo_l432kc_rust/src/: lib.rs  main.rs  serial_sender.rs  stepper.rs
practice_rust/practice_concurrency/: Cargo.toml
practice_rust/practice_memory_management/: Cargo.toml
practice_rust/practice_random/: Cargo.toml
practice_rust/practice_understanding_size_in_rust/: Cargo.toml
practice_rust/practice_unit_testing/: Cargo.toml
practice_rust/udem_from_beginner_to_expert_2.0/: example.rs
practice_shell/: export.sh  shell.sh  touchfile.sh
practice_temp/: Makefile  main.VC.db  main.sln  main.vcxproj  main.vcxproj.filters
practice_temp/include/: ClassTest.h  Common.h  DesignPattern.h  DoublyLinkedList.h  LinkedList.h  Queue.h  Stack.h  StructTest.h  ThreadTest.h
practice_temp/src/: ClassTest.cpp  DesignPattern.cpp  DoublyLinkedList.cpp  LinkedList.cpp  Stack.cpp  StructTest.cpp  ThreadTest.cpp  main.cpp
python/crc/: crc32.py
python/electronics/: thermistor.py
python/log_parser/: log_parser.py  test.py
python/mqtt/: mqtt_test1.py
python/running_exe/: batch.bat  run_repeat.py  upgrade_runner.py
python/serial_test/: serial_gui.py  serial_test.py
python/utility/: change_file_name_01.py  change_xlsx_file_name.py
spidev_test/: Makefile  buildhistroy.txt  spidev_test.c  spidev_test_simple.c
template_C++/: README.md  main.cpp
test_init/: Makefile
test_init/src/: main  main.cpp
test_openCV_linux/: CMakeLists.txt  Makefile  main.cpp
toggle_gpio/: Makefile  README.md
utils/: change_xlsx_file_name.bat
vs2015/: Delete temporary files.bat  SungsuDev_2015.sln
(+715 files in other folders)
