[package]
name = "cortex-m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"

[dependencies.stm32f4]
version = "0.15.1"
features = ["stm32f401", "rt"]

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]