[package]
name = "cortex-m"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]

[dependencies.stm32f4xx-hal]
version = "0.19.0"
features = ["stm32f407"] # replace the model of your microcontroller here
                         # and add other required features