[package]
name = "nucleo-l432-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
nb = "1.1.0"
heapless = "0.8.0"

[dependencies.cortex-m-rt]
version = "0.7.3"
features = ["device"]

[dependencies.stm32l4xx-hal]
version = "0.7.1"
features = ["stm32l432"] # replace the model of your microcontroller here
                         # and add other required features